--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Log",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A log and time-tracking system",
   "repository": "https://github.com/joshavanier/log",
   "main": "./main.js",
@@ -15,8 +15,6 @@
   "dependencies": {
     "electron-json-storage": "^4.0.2",
     "electron-packager": "^8.4.0",
-    "electron-reload": "^1.2.2",
-    "electron-storage": "^1.0.7",
-    "shelljs": "0.7.8"
+    "electron-storage": "^1.0.7"
   }
 }
