--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Log",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A log and time-tracking system",
   "repository": "https://github.com/joshavanier/log",
   "main": "./main.js",
@@ -13,9 +13,6 @@
     "electron-prebuilt": "^1.4.13"
   },
   "dependencies": {
-    "electron-json-storage": "^4.0.2",
-    "electron-packager": "^8.4.0",
-    "electron-storage": "^1.0.7",
-    "electron-reload": "^1.2.2"
+    "electron-packager": "^8.4.0"
   }
 }
