--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron-prebuilt": "^1.4.13"
   },
   "dependencies": {
-    "electron-packager": "^8.4.0"
+    "electron-packager": "^8.4.0",
+    "headless-work-timer": "0.0.1"
   }
 }
