Tab changing with Ctrl

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "electron": "^1.8.1",
-    "electron-prebuilt": "^1.4.13"
+    "electron-prebuilt": "^1.4.13",
+	"electron-reload": "^1.2.2"
   },
   "dependencies": {
     "electron-packager": "^8.4.0",
