--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "electron-packager": "^8.4.0",
-    "headless-work-timer": "0.0.3"
+    "headless-work-timer": "0.0.3",
+    "aequirys": "1.0.2"
   }
 }
