--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
     "build_win": "electron-packager . Log --platform=win32  --arch=x64 --out ./build --overwrite; echo 'Built for Windows'"
   },
   "devDependencies": {
-    "electron": "^1.8.2-beta.4",
+    "electron": "^1.8.2",
+    "electron-packager": "^8.4.0",
     "electron-reload": "^1.2.2",
-    "electron-packager": "^8.4.0"
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^4.0.2",
+    "gulp-if": "^2.0.2"
   },
   "dependencies": {
     "headless-work-timer": "0.0.3",
